# study

./: README.md
CalibrateCamera/: .gitignore  CMakeLists.txt
CalibrateCamera/Calibrate/: CMakeLists.txt  main.cpp
CalibrateCamera/Calibrate/include/: calibrate.h
CalibrateCamera/Calibrate/src/: calibrate.cpp  getResult.cpp  openCamera.cpp
Dataset/HikDriver/include/HikDriver/: HikDriver.h
DetectObject/work_blue/: main.cpp
DetectObject/work_green/: CMakeLists.txt  main.cpp
DetectObject/work_red/: CMakeLists.txt  main.cpp
DetectObject/work_rgb/: main.cpp
armor_ws/install/: local_setup.sh  setup.sh
armor_ws/install/HikDriver/share/HikDriver/: package.bash  package.zsh
armor_ws/install/armor_interfaces/share/armor_interfaces/: local_setup.sh  package.sh
armor_ws/install/armor_interfaces/share/armor_interfaces/cmake/: armor_interfaces__rosidl_typesupport_cppExport.cmake  export_armor_interfaces__rosidl_generator_pyExport.cmake
armor_ws/install/armor_interfaces/share/armor_interfaces/msg/: Armor.idl  Armors.idl
armor_ws/install/armor_pub/include/: detect.h
armor_ws/install/armor_pub/lib/armor_pub/: armor_pub_node
armor_ws/install/armor_pub/share/armor_pub/: local_setup.sh  package.bash  package.ps1  package.sh  package.xml
armor_ws/install/armor_pub/share/armor_pub/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  armor_pubConfig.cmake
armor_ws/install/armor_sub/lib/armor_sub/: armor_sub_node
armor_ws/install/armor_sub/share/armor_sub/: local_setup.sh  package.ps1  package.sh  package.zsh
armor_ws/install/armor_sub/share/armor_sub/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake
armor_ws/log/: latest_build  latest_list
armor_ws/src/: .CMakeLists.txt
armor_ws/src/armor_interfaces/: CMakeLists.txt
armor_ws/src/armor_interfaces/msg/: Armor.msg
armor_ws/src/detectArmor/: CMakeLists.txt
armor_ws/src/detectArmor/HikDriver/: CMakeLists.txt
armor_ws/src/detectArmor/HikDriver/include/HikDriver/: HikDriver.h
armor_ws/src/detectArmor/HikDriver/src/: HikDriver.cpp
armor_ws/src/detectArmor/include/: pnpslover.h
armor_ws/src/detectArmor/src/Armor/: Armor.cpp
armor_ws/src/detectArmor/src/armor_detector/: matchArmor.cpp  matchLight.cpp  readDealCheck.cpp  show.cpp
armor_ws/src/detectArmor/src/pnpSlover/: pnpSlover.cpp
armor_ws/src/trackerArmor/: CMakeLists.txt  package.xml
armor_ws/src/trackerArmor/src/: ArmorSubNode.cpp
detectArmor/: .gitignore  CMakeLists.txt  README.md  main.cpp
detectArmor/ArmorDetect/: CMakeLists.txt
detectArmor/ArmorDetect/include/: detect.h
detectArmor/ArmorDetect/src/pnpSlover/: pnpSlover.cpp
detectArmor/HikDriver/: CMakeLists.txt
detectArmor/armor_detect/: main.cpp
detectArmor/armor_detect/include/: pnpslover.h
detectArmor/armor_detect/src/armor_detector/: draw.cpp  matchArmor.cpp  matchLight.cpp  show.cpp
detectArmor/armor_detect/src/pnpSlover/: pnpSlover.cpp
detectArmor/hik_camera/include/: camera_class.h
detectArmor/hik_camera/src/: camera_class.cpp
detectArmor/include/: detect.h  pnpslover.h
detectArmor/src/Light/: Light.cpp
detectArmor/src/armor_detector/: detectLight.cpp  draw.cpp  matchArmor.cpp  matchLight.cpp  readDealCheck.cpp  show.cpp
detectEnergyStation/: CMakeLists.txt  main.cpp
detectEnergyStation/include/: detect.h
detectEnergyStation/src/Detect/: detec.cpp  detectContours.cpp  readAndDeal.cpp  show.cpp
detectEnergyStation/src/DetectR/: DetectR.cpp  drawR.cpp  findR.cpp
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/armor_interfaces/share/armor_interfaces/: local_setup.sh  package.sh  package.xml
ros2_ws/install/armor_interfaces/share/armor_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  armor_interfaces__rosidl_typesupport_introspection_cExport.cmake  export_armor_interfaces__rosidl_typesupport_fastrtps_cExport.cmake
ros2_ws/install/armor_interfaces/share/armor_interfaces/msg/: Armor.idl  Target.idl
ros2_ws/install/armor_pub/lib/armor_pub/: armor_pub_node
ros2_ws/install/armor_pub/share/armor_pub/: local_setup.dsv  package.dsv  package.sh  package.xml  package.zsh
ros2_ws/install/armor_sub/include/: ArmorSubNode.h
ros2_ws/install/armor_sub/lib/armor_sub/: armor_sub_node
ros2_ws/install/armor_sub/share/armor_sub/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh
ros2_ws/install/armor_sub/share/armor_sub/cmake/: armor_subConfig.cmake
ros2_ws/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
ros2_ws/install/cpp_pubsub/share/cpp_pubsub/: local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
ros2_ws/install/cpp_pubsub/share/cpp_pubsub/cmake/: ament_cmake_export_dependencies-extras.cmake
ros2_ws/install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.dsv  local_setup.sh  package.sh  package.xml
ros2_ws/install/tutorial_interfaces/share/tutorial_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  (+1 more)
ros2_ws/log/: latest_build
ros2_ws/src/: .CMakeLists.txt
ros2_ws/src/ArmorPub/: CMakeLists.txt
ros2_ws/src/ArmorPub/include/: ArmorPubNode.h
ros2_ws/src/ArmorPub/src/: ArmorPubNode.cpp
ros2_ws/src/armor_interfaces/: CMakeLists.txt
ros2_ws/src/armor_interfaces/msg/: Armor.msg
ros2_ws/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
ros2_ws/src/tutorial_interfaces/: CMakeLists.txt
ros2_ws3/install/: setup.sh
ros2_ws3/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
ros2_ws3/install/cpp_pubsub/share/cpp_pubsub/: local_setup.bash  package.xml
ros2_ws3/install/tutorial_interfaces/share/tutorial_interfaces/: local_setup.bash  local_setup.sh  local_setup.zsh  package.sh
ros2_ws3/src/cpp_pubsub/: CMakeLists.txt
ros2_ws3/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
usb/: CMakeLists.txt  main.cpp
(+97 files in other folders)
