<?xml version="1.0"?> <!--声明该文件是一个xml文件 指定xml版本为1.0-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armor_interfaces</name> <!--构建一个名为armor_interfaces的ROS2接口包-->
  <version>0.0.0</version><!--包的版本号-->
  <description>TODO: Package description</description><!--描述包的功能-->
  <maintainer email="2127800097@qq.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend><!--包构建时需要的依赖-->
  <depend>geometry_msgs</depend><!--包运行时需要的依赖-->

  <build_depend>rosidl_default_generators</build_depend><!--定义包构建时需要依赖的生成工具-->
  <exec_depend>rosidl_default_runtime</exec_depend><!--定义包在运行时需要依赖的包-->
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
